--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "candletrack",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://osmanalec.github.io/quantaview/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
