--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v4
 
-      - name: Setup Node.js  - Cache dependencies  - Install dependencies 🔧
+      - name: Setup Node.js  - Cache dependencies  - Install dependencies
         uses: ./.github/workflows/setup-node
 
       - name: Setup Pages 
