--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -1,5 +1,5 @@
 name: setup-node
-description: "Setup Node.js - Cache dependencies - Install dependencies 🔧"
+description: "Setup Node.js - Cache dependencies - Install dependencies"
 runs:
   using: "composite"
   steps:
