--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "deploy": "npm run build && npm run export && git add ."
   },
   "dependencies": {
     "next": "15.3.5",
