--- a/quanta-view-frontend/package.json
+++ b/quanta-view-frontend/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "candletrack",
+  "name": "quanta-view-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://osmanalec.github.io/quantaview/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && npm run export && git add ."
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "15.4.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
